--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<h3 class="" data-start="98" data-end="141">Tutorial de Introdução a Algoritmos</h3>
-Esta playlist ensina pensamento algorítmico e programação para crianças a partir de 14 anos (ensino médio), usando uma linguagem simples (Portugol), exemplos do dia a dia e desafios em forma de jogos e problemas.
+<h3>Tutorial de Introducao a Algoritmos</h3>
+Esta playlist ensina pensamento algoritmico e programacao para estudantes a partir de 14 anos, usando Portugol, exemplos do dia a dia e desafios em forma de jogos e problemas.
 
-Aqui você vai aprender a pensar como um programador: resolver problemas, criar estratégias, usar laços, decisões, vetores e funções para construir soluções inteligentes.
+Aqui voce vai aprender a pensar como um programador: resolver problemas, criar estrategias, usar lacos, decisoes, vetores e funcoes para construir solucoes inteligentes.
 
 <hr />
 
@@ -9,19 +9,29 @@ Aqui você vai aprender a pensar como um programador: resolver problemas, criar 
 
 <strong>Slides</strong>
 
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/01-Introducao.pdf">1 - Introducao ao R</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/02-Pacotes-Ajuda.pdf">2 - Pacotes e Ajuda</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/03-Objetos.pdf">3 - Objetos</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/04-Notacao.pdf">4 - Notacao</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/05-Modificacao-Valores.pdf">5 - Modificacao de valores</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/06-Estrutura-Repeticao.pdf">6 - Estrutura de Repeticao</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/07-Fatores.pdf">7 - Fatores</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/08-Listas.pdf">8 - Listas</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/09-Data-Frames.pdf">9 - Data frame</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/10-Apply.pdf">10 - Apply</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/11-Ordenacao.pdf">11 - Ordenacao</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/12-Manipulacao-Dados.pdf">12 - Manipulacao de dados</a>
-<a href="https://github.com/eogasawara/tutorial-r/blob/main/13-S3-Classes.pdf">13 - Classes S3</a>
+<a href="01-o-que-e-um-problema-e-um-algoritmo.pdf">1 - O que e um Problema e um Algoritmo</a><br />
+<a href="02-pensar-em-passos-e-sequencias.pdf">2 - Pensar em Passos e Sequencias</a><br />
+<a href="03-entrada-saida-e-testar-solucoes.pdf">3 - Entrada, Saida e Testar Solucoes</a><br />
+<a href="04-como-escrever-e-representar-algoritmos.pdf">4 - Como Escrever e Representar Algoritmos</a><br />
+<a href="05-variaveis-guardando-informacoes.pdf">5 - Variaveis: Guardando Informacoes</a><br />
+<a href="06-variaveis-entrada-e-saida-em-portugol.pdf">6 - Variaveis, Entrada e Saida em Portugol</a><br />
+<a href="07-guardar-nao-e-comparar.pdf">7 - Guardar nao e comparar</a><br />
+<a href="08-tipos-de-dados.pdf">8 - Tipos de Dados</a><br />
+<a href="09-fazendo-contas-em-portugol.pdf">9 - Fazendo Contas em Portugol</a><br />
+<a href="10-verdadeiro-falso-e-comparacoes.pdf">10 - Verdadeiro, Falso e Comparacoes</a><br />
+<a href="11-operadores-logicos.pdf">11 - Operadores Logicos</a><br />
+<a href="12-se-e-senao-em-portugol.pdf">12 - Se e Senao em Portugol</a><br />
+<a href="13-fazendo-o-chines-execucao-passo-a-passo-de-algoritmos.pdf">13 - Fazendo o Chines Execucao Passo a Passo de Algoritmos</a><br />
+<a href="14-scratch-ambiente-visual-para-executar-algoritmos.pdf">14 - Scratch: Ambiente Visual para Executar Algoritmos</a><br />
+<a href="15-conectando-portugol-e-scratch.pdf">15 - Conectando Portugol e Scratch</a><br />
+<a href="16-comparar-textos-e-numeros.pdf">16 - Comparar Textos e Numeros</a><br />
+<a href="17-resolvendo-problemas-com-decisoes.pdf">17 - Resolvendo Problemas com Decisoes</a><br />
+<a href="18-repetir-com-contador-para.pdf">18 - Repetir com Contador (para)</a><br />
+<a href="19-repetir-ate-uma-condicao-enquanto.pdf">19 - Repetir ate uma condicao (enquanto)</a><br />
+<a href="20-como-o-computador-executa-um-programa.pdf">20 - Como o Computador Executa um Programa</a><br />
+<a href="21-fazendo-o-chines-em-lacos.pdf">21 - Fazendo o Chines em Lacos</a><br />
+<a href="22-scratch-para-entender-lacos.pdf">22 - Scratch para Entender Lacos</a><br />
+<a href="23-resolvendo-problemas-com-repeticao.pdf">23 - Resolvendo Problemas com Repeticao</a>
 
 &nbsp;
 
@@ -42,16 +52,16 @@ https://www.youtube.com/playlist?list=PLTy3TWJeueGz1BZSaGRrnIUGcyV-5QV_c
 <strong>Bibliografia</strong>
 <div class="csl-bib-body">
 <div class="csl-entry">
-<div class="csl-left-margin">[1] WING, Jeannette M. Computational thinking. Communications of the ACM, New York, v. 49, n. 3, p. 33–35, 2006.</div>
+<div class="csl-left-margin">[1] WING, Jeannette M. Computational thinking. Communications of the ACM, New York, v. 49, n. 3, p. 33-35, 2006.</div>
 </div>
 <div class="csl-entry">
 <div class="csl-left-margin">[2] PAPERT, Seymour. Mindstorms: children, computers, and powerful ideas. New York: Basic Books, 1980.</div>
 </div>
 <div class="csl-entry">
-<div class="csl-left-margin">[3] PÓLYA, George. How to solve it: a new aspect of mathematical method. 2. ed. Princeton: Princeton University Press, 1957.</div>
+<div class="csl-left-margin">[3] POLYA, George. How to solve it: a new aspect of mathematical method. 2. ed. Princeton: Princeton University Press, 1957.</div>
 </div>
 <div class="csl-entry">
-<div class="csl-left-margin">[4] CAMPOS, A. F. G. A.; CAMPOS, E. A. V. Fundamentos da programação de computadores: algoritmos, Pascal, C/C++ (padrão ANSI) e Java. 3. ed. São Paulo: Pearson, 2012.</div>
+<div class="csl-left-margin">[4] CAMPOS, A. F. G. A.; CAMPOS, E. A. V. Fundamentos da programacao de computadores: algoritmos, Pascal, C/C++ (padrao ANSI) e Java. 3. ed. Sao Paulo: Pearson, 2012.</div>
 </div>
 </div>
 &nbsp;
